# NetScope

./: .gitignore  CMakeLists.txt  README.md  commands.md  new_README.md
app/: decode_one.cpp  netscope_cli.cpp
include/netscope/: packet.hpp  parser.hpp  stats.hpp  util.hpp
src/: decode_one.cpp  parser.cpp  pcap_read.cpp  stats.cpp  util.cpp
